--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
 
 before_script:
+  - npm config set registry http://registry.npmjs.org/
   - npm install grunt-cli bower -g
   - PATH=$(npm bin):$PATH
   - npm install && bower install
